feat: Add Windows support (#591)
* Add Windows build to tests

* Fix TargetedRepairTest on Windows

* Fix ScannedViolation.getAbsolutePath() on Windows

* Fix typo in workflow

* Only check formatting on Linux

* Ignore failing tests on Windows

* Note that Windows is partially supported